--- a/private_dot_config/i3status/config.tmpl
+++ b/private_dot_config/i3status/config.tmpl
@@ -14,6 +14,9 @@ order += "memory"
 order += "disk /"
 order += "ethernet _first_"
 order += "volume master"
+{{- if .battery }}
+order += "battery all"
+{{- end }}
 order += "tztime local"
 
 load {
@@ -28,7 +31,7 @@ memory {
 
 cpu_temperature 0 {
     format = "<span background='#bf616a'>  %degrees °C </span>"
-    path = "/sys/devices/pci0000:00/0000:00:18.3/hwmon/hwmon0/temp1_input"
+    path = "{{ .temperature_file }}"
 }
 
 disk "/" {
