Fix vim file type

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -1,4 +1,4 @@
-{{/* vim: set ft=gotextmpl : */}}
+{{/* vim: set ft=gotexttmpl : */}}
 encryption = "gpg"
 [gpg]
     recipient = "9F2540F5C7A2DD39030476CE3446FAE369C9A8B4"
