--- a/run_once_configure-emacs.sh.tmpl
+++ b/run_once_configure-emacs.sh.tmpl
@@ -3,21 +3,32 @@
 
 set -euo pipefail
 
+header(){
+    printf " :$1: " | xargs -d: -n1 printf '\033[1;30;42m %-40s \033[0m\n'
+}
+
 readonly DOOM_DIR="{{.emacs_doom_dir}}"
 readonly SPACEMACS_DIR="{{.emacs_spacemacs_dir}}"
+readonly CHEMACS2_URL="https://github.com/plexus/chemacs2.git"
 
 if [[ ! -d "${DOOM_DIR}" ]]
 then
+    header "Installing Doom-Emacs"
     git clone https://github.com/hlissner/doom-emacs "${DOOM_DIR}"
     "${DOOM_DIR}/bin/doom" install
 fi
 
 if [[ ! -d "${SPACEMACS_DIR}" ]]
 then
+    header "Installing Spacemacs"
     git clone https://github.com/syl20bnr/spacemacs "${SPACEMACS_DIR}"
 fi
 
-[ -f ~/.emacs ] && mv ~/.emacs ~/.emacs.bak
-[ -d ~/.emacs.d ] && mv ~/.emacs.d ~/.emacs.legacy
-git clone https://github.com/plexus/chemacs2.git ~/.emacs.d
+if [[ "$( git -C ~/.emacs.d remote get-url origin)" != "${CHEMACS2_URL}" ]]
+then
+    header "Installing Chemacs2"
+    rm -f ~/.emacs
+    rm -rf ~/.emacs.d
+    git clone "${CHEMACS2_URL}" ~/.emacs.d
+fi
 
