--- a/run_update-emacs.sh.tmpl
+++ b/run_update-emacs.sh.tmpl
@@ -3,12 +3,24 @@
 
 set -euo pipefail
 
+header(){
+    printf " :$1: " | xargs -d: -n1 printf '\033[1;30;42m %-40s \033[0m\n'
+}
+
+header "Updating Chemacs2"
+
 git -C "${HOME}/.emacs.d" pull
 
-"{{.emacs_spacemacs_dir}}/bin/doom" update
+header "Updating Emacs Doom"
+
+"{{.emacs_doom_dir}}/bin/doom" upgrade
+
+header "Updating Spacemacs"
 
 readonly SPACEMACS_DIR="{{.emacs_spacemacs_dir}}"
 git -C "$SPACEMACS_DIR" pull
 emacs --batch -l "${SPACEMACS_DIR}/init.el" --eval="(configuration-layer/update-packages t)"
+
+header "Restarting emacs.service"
 
 systemctl restart --no-block --user emacs
