--- a/run_update-emacs.sh.tmpl
+++ b/run_update-emacs.sh.tmpl
@@ -13,7 +13,7 @@ git -C "${HOME}/.emacs.d" pull
 
 header "Updating Emacs Doom"
 
-"{{.emacs_doom_dir}}/bin/doom" upgrade
+"{{.emacs_doom_dir}}/bin/doom" --yes upgrade
 
 header "Updating Spacemacs"
 
