--- a/private_dot_config/i3/config.tmpl
+++ b/private_dot_config/i3/config.tmpl
@@ -1,3 +1,4 @@
+{{/* vim: set ft=gotexttmpl : */}}
 # i3 config file (v4)
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference
