--- a/private_dot_config/i3/config.tmpl
+++ b/private_dot_config/i3/config.tmpl
@@ -325,6 +325,16 @@ mode $setxkbmap {
 }
 bindsym $mod+Ctrl+k mode $setxkbmap
 
+set $mode_gaps "Toggle gaps: (1) on (2) off"
+bindsym $mod+Shift+g mode $mode_gaps
+mode $mode_gaps {
+    bindsym 1 mode "default", gaps inner all set 10
+    bindsym 2 mode "default", gaps inner all set 0
+
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
@@ -352,6 +362,7 @@ client.urgent               #2f343f #2f343f #d8dee8 #2f343f #2f343f
 client.placeholder          #2f343f #2f343f #d8dee8 #2f343f #2f343f
 client.background           #2f343f
 
-default_border pixel 1
+for_window [class=".*"] border pixel 1
+smart_borders on
 hide_edge_borders both
 for_window [floating] move position center
