--- a/run_once_configure-emacs.sh.tmpl
+++ b/run_once_configure-emacs.sh.tmpl
@@ -3,21 +3,23 @@
 
 set -euo pipefail
 
+warning(){
+    printf " /$1/ " | xargs -d/ -n1 printf '\033[1;30;43m %-40s \033[0m\n'
+}
 
 header(){
     printf " :$1: " | xargs -d: -n1 printf '\033[1;30;42m %-40s \033[0m\n'
 }
 
 
+{{ if (and (ne .emacs_doom_dir "no") (ne .emacs_spacemacs_dir "no")) -}}
+warning "Skip emacs configuration: no emacs distribution is selected"
+{{ else }}
+
+{{ if (ne .emacs_doom_dir "no") -}}
 DOOM_DIR="{{.emacs_doom_dir}}"
 DOOM_DIR="${DOOM_DIR/#\~/$HOME}"
 readonly DOOM_DIR
-
-SPACEMACS_DIR="{{.emacs_spacemacs_dir}}"
-SPACEMACS_DIR="${SPACEMACS_DIR/#\~/$HOME}"
-readonly SPACEMACS_DIR
-
-readonly CHEMACS2_URL="https://github.com/plexus/chemacs2.git"
 
 if [[ ! -d "${DOOM_DIR}" ]]
 then
@@ -25,12 +27,21 @@ then
     git clone https://github.com/hlissner/doom-emacs "${DOOM_DIR}"
     "${DOOM_DIR}/bin/doom" install
 fi
+{{ end }}
+
+{{ if (ne .emacs_spacemacs_dir "no") -}}
+SPACEMACS_DIR="{{.emacs_spacemacs_dir}}"
+SPACEMACS_DIR="${SPACEMACS_DIR/#\~/$HOME}"
+readonly SPACEMACS_DIR
 
 if [[ ! -d "${SPACEMACS_DIR}" ]]
 then
     header "Installing Spacemacs"
     git clone https://github.com/syl20bnr/spacemacs "${SPACEMACS_DIR}"
 fi
+{{ end }}
+
+readonly CHEMACS2_URL="https://github.com/plexus/chemacs2.git"
 
 if [[ "$( set +e; git -C ~/.emacs.d remote get-url origin 2>/dev/null; set -e)" != "${CHEMACS2_URL}" ]]
 then
@@ -40,3 +51,4 @@ then
     git clone "${CHEMACS2_URL}" ~/.emacs.d
 fi
 
+{{ end }}
