--- a/run_update-emacs.sh.tmpl
+++ b/run_update-emacs.sh.tmpl
@@ -3,6 +3,11 @@
 
 set -euo pipefail
 
+if ! command -v emacs &>/dev/null; then
+    printf " /Skip update: emacs is not installed/ " | xargs -d/ -n1 printf '\033[1;30;43m %-40s \033[0m\n'
+    exit 0
+fi
+
 header(){
     printf " :$1: " | xargs -d: -n1 printf '\033[1;30;42m %-40s \033[0m\n'
 }
@@ -11,13 +16,17 @@ header "Updating Chemacs2"
 
 git -C "${HOME}/.emacs.d" pull
 
+{{ if ne .emacs_doom_dir "no" -}}
 header "Updating Emacs Doom"
 
 DOOM_DIR="{{.emacs_doom_dir}}"
 DOOM_DIR="${DOOM_DIR/#\~/$HOME}"
 readonly DOOM_DIR
 "${DOOM_DIR}/bin/doom" --yes upgrade
+{{ end }}
 
+
+{{ if ne .emacs_spacemacs_dir "no" -}}
 header "Updating Spacemacs"
 
 SPACEMACS_DIR="{{.emacs_spacemacs_dir}}"
@@ -30,6 +39,7 @@ emacs \
     --with-profile spacemacs \
     --batch \
     --eval="(configuration-layer/update-packages t)"
+{{ end }}
 
 header "Restarting emacs.service"
 
