--- a/dot_emacs-profiles.el.tmpl
+++ b/dot_emacs-profiles.el.tmpl
@@ -1,3 +1,20 @@
-(("default" . ((user-emacs-directory . "~/.emacs_doom")))
- ("spacemacs" . ((user-emacs-directory . "~/.emacs_spacemacs")))
- ("doom" . ((user-emacs-directory . "~/.emacs_doom"))))
+{{/* vim: set ft=gotexttmpl : */}}
+
+{{- define "default_emacs" -}}
+{{- if (ne .emacs_doom_dir "no" -}}
+{{ .emacs_doom_dir }}
+{{- else -}}
+{{ .emacs_spacemacs_dir }}
+{{- end }}
+
+{{ if (or (ne .emacs_doom_dir "no") (ne .emacs_spacemacs.dir "no")) }}
+(
+ ("default" . ((user-emacs-directory . "{{ template "default_emacs" }}")))
+{{ if (ne .emacs_doom_dir "no" -}}
+ ("doom" . ((user-emacs-directory . "{{ .emacs_doom_dir }}")))
+{{- end }}
+{{ if (ne .emacs_spacemacs_dir "no" -}}
+ ("spacemacs" . ((user-emacs-directory . "{{ .emacs_spacemacs_dir }}")))
+{{- end }}
+)
+{{- end }}
