--- a/run_once_configure-emacs.sh.tmpl
+++ b/run_once_configure-emacs.sh.tmpl
@@ -4,15 +4,15 @@
 set -euo pipefail
 
 warning(){
-    printf " /$1/ " | xargs -d/ -n1 printf '\033[1;30;43m %-40s \033[0m\n'
+    printf " /$1/ " | xargs -d/ -n1 printf '\033[1;30;43m %-60s \033[0m\n'
 }
 
 header(){
-    printf " :$1: " | xargs -d: -n1 printf '\033[1;30;42m %-40s \033[0m\n'
+    printf " :$1: " | xargs -d: -n1 printf '\033[1;30;42m %-60s \033[0m\n'
 }
 
 
-{{ if (and (ne .emacs_doom_dir "no") (ne .emacs_spacemacs_dir "no")) -}}
+{{ if (and (eq .emacs_doom_dir "no") (eq .emacs_spacemacs_dir "no")) -}}
 warning "Skip emacs configuration: no emacs distribution is selected"
 {{ else }}
 
