--- a/private_dot_config/i3/config.tmpl
+++ b/private_dot_config/i3/config.tmpl
@@ -73,10 +73,10 @@ bindsym $mod+Return exec alacritty
 bindsym $mod+Shift+q kill
 
 # start a program launcher
-bindsym $mod+d exec rofi -lines 18 -padding 18 -width 60 -location 0 -show drun -sidebar-mode -columns 3 -font 'DejaVu Sans Condensed 12'
+#bindsym $mod+d exec rofi -lines 18 -padding 18 -width 60 -location 0 -show drun -sidebar-mode -columns 3 -font 'DejaVu Sans Condensed 12'
 # start emoji picker
 #bindsym $mod+j exec rofi -show emoji -modi emoji
-bindsym $mod+y exec notify-send '🤔'
+bindsym $mod+d exec notify-send '🤔'
 
 #change volume
 # Pulseaudio
