--- a/private_dot_config/i3/config.tmpl
+++ b/private_dot_config/i3/config.tmpl
@@ -77,6 +77,11 @@ bindsym $mod+d exec rofi -lines 18 -padding 18 -width 60 -location 0 -show drun 
 # start emoji picker
 bindsym $mod+y exec rofi -show emoji -modi emoji
 
+# toggle alacritty colorscheme
+set $alacritty_light_color base16-classic-light-256.yml
+set $alacritty_dark_color base16-classic-dark-256.yml
+bindsym $mod+Shift+t exec alacritty-colorscheme -V toggle $alacritty_light_color $alacritty_dark_color && notify-send "Alacritty Colorscheme" `alacritty-colorscheme status`
+
 #change volume
 # Pulseaudio
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5%    && killall -USR1 i3status
