--- a/private_dot_config/i3/config.tmpl
+++ b/private_dot_config/i3/config.tmpl
@@ -83,7 +83,7 @@ set $alacritty_dark_color base16-classic-dark-256.yml
 bindsym $mod+Shift+t exec alacritty-colorscheme -V toggle $alacritty_light_color $alacritty_dark_color && notify-send "Alacritty Colorscheme" `alacritty-colorscheme status`
 
 # toggle action on lid close
-bindsym $mod+Shift+l exec toggle-lid-close-action
+bindsym $mod+Ctrl+l exec toggle-lid-close-action
 
 #change volume
 # Pulseaudio
