--- a/private_dot_config/i3/config.tmpl
+++ b/private_dot_config/i3/config.tmpl
@@ -103,6 +103,9 @@ bindsym XF86AudioStop exec playerctl -p spotify stop
 bindsym XF86MonBrightnessUp   exec light -A 5 # increase screen brightness
 bindsym XF86MonBrightnessDown exec light -U 5 # decrease screen brightness
 
+# Translate selected text (to English)
+bindsym $mod+Ctrl+t exec ~/bin/translate
+
 # I2C brightness control
 # Requires:
 #
