--- a/private_dot_config/i3/config.tmpl
+++ b/private_dot_config/i3/config.tmpl
@@ -82,7 +82,7 @@ bindsym $mod+d exec \
     -show drun \
     -sidebar-mode \
     -columns 3 \
-    -font 'Roboto Mono 12'
+    -font 'Roboto Condensed 12'
 # start emoji picker
 bindsym $mod+y exec rofi -show emoji -modi emoji
 
