--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -16,11 +16,11 @@ encryption = "gpg"
       | printf "package_mode [%s]"
       | promptString -}}
 {{- end -}}
-{{- if has $package_mode $package_modes -}}
-    packages = {{ $package_mode }}
+{{- if has $package_mode $package_modes }}
+    package_mode = {{ $package_mode | quote }}
 {{- else -}}
-{{-   printf "package mode '%s' is incorrect, falling back to %s" $package_mode $default_package_mode | writeToStdout -}}
-    packages = {{ first $package_modes }}
+{{-   printf "package mode '%s' is incorrect, falling back to %s" $package_mode $default_package_mode | writeToStdout }}
+    package_mode = {{ first $package_modes | quote }}
 {{- end }}
 
 {{- $battery := get . "battery" -}}
