--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -34,7 +34,7 @@ yay -S --needed --answerclean N --answerdiff N \
     bat \
     bpytop \
     duf \
-    emacs \
+    emacs-nativecomp \
     exa \
     fd \
     fzf \
