--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -46,6 +46,7 @@ yay -S --needed --answerclean N --answerdiff N \
     nodejs \
     ripgrep \
     rsync \
+    starship \
     tmux \
     yarn \
     z \
