--- a/private_dot_config/i3/config.tmpl
+++ b/private_dot_config/i3/config.tmpl
@@ -390,6 +390,7 @@ bar {
 #client.placeholder          #2f343f #2f343f #d8dee8 #2f343f #2f343f
 #client.background           #2f343f
 
+for_window [title="^zoom$"] floating enable
 for_window [class=".*"] border pixel 1
 smart_borders on
 hide_edge_borders both
