--- a/private_dot_config/i3/config.tmpl
+++ b/private_dot_config/i3/config.tmpl
@@ -64,6 +64,7 @@ exec_always {{ template "ergodox" }}
 # exec --no-startup-id redshift -l geoclue2 -t 6500K:3500K
 # exec --no-startup-id udiskie --no-automount --no-notify --tray
 exec --no-startup-id dex -ae i3
+exec --no-startup-id workrave
 exec_always --no-startup-id xkb-switch --i3
 
 # start a terminal
