--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -38,15 +38,18 @@ yay -S --needed --answerclean N --answerdiff N \
     exa \
     fd \
     fzf \
+    htop \
     hunspell \
     hunspell-de \
     hunspell-en_us \
     hunspell-ru \
+    lsof \
     neovim \
     nodejs \
     ripgrep \
     rsync \
     starship \
+    strace \
     tmux \
     yarn \
     z \
