--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -75,7 +75,7 @@ yay -S --needed --answerclean N --answerdiff N \
     pulseaudio \
     pulseaudio-alsa \
     rofi \
-    ttf-iosevka \
+    ttc-iosevka-nerd \
     ttf-roboto \
     xorg
 {{ end -}}
