--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -45,6 +45,7 @@ yay -S --needed --answerclean N --answerdiff N \
     hunspell-ru \
     lsof \
     neovim \
+    networkmanager \
     nodejs \
     ripgrep \
     rsync \
@@ -69,6 +70,7 @@ yay -S --needed --answerclean N --answerdiff N \
     i3status \
     lightdm \
     lightdm-slick-greeter \
+    network-manager-applet \
     noto-fonts \
     noto-fonts-emoji \
     pavucontrol \
