--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -104,3 +104,14 @@ yay -S --needed --answerclean N --answerdiff N \
     xkb-switch-i3 \
     xsel
 {{ end -}}
+
+{{ if .battery -}}
+header "Installing optional packages for battery powered devices"
+
+yay -S --needed --answerclean N --answerdiff N \
+    light \
+    powertop \
+    tlp \
+    tlp-rdw
+{{ end -}}
+
