Update .zsh/.zshrc Update .zsh/zshrc/antidote.zsh Update install-packages.sh

--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -26,7 +26,6 @@ fi
 header "Installing optional headless packages"
 
 yay -S --needed --answerclean N --answerdiff N \
-    antibody-bin \
     aspell \
     aspell-de \
     aspell-en \
@@ -55,6 +54,7 @@ yay -S --needed --answerclean N --answerdiff N \
     yarn \
     z \
     zsh \
+    zsh-antidote \
     zsh-completions
 {{ end -}}
 
