--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -50,6 +50,7 @@ yay -S --needed --answerclean N --answerdiff N \
     rsync \
     starship \
     strace \
+    syncthing \
     tmux \
     yarn \
     z \
