Update .zsh/.zshrc Update .zsh/zshrc/aliases-and-functions.zsh Add .zsh/zshrc/tools/direnv.zsh Add .zsh/zshrc/tools/docker.zsh Add .zsh/zshrc/tools/emacs.zsh Add .zsh/zshrc/tools/go-task.zsh Add .zsh/zshrc/tools/k8s.zsh Add .zsh/zshrc/tools/openstack.zsh Add .zsh/zshrc/tools/terraform.zsh Add .zsh/zshrc/tools/zoxide.zsh Update install-packages.sh Change attributes of .zsh/zshrc/tools/antidote.zsh Change attributes of .zsh/zshrc/tools/fzf.zsh Change attributes of .zsh/zshrc/tools/golang.zsh Change attributes of .zsh/zshrc/tools/node.zsh Change attributes of .zsh/zshrc/tools/python.zsh Change attributes of .zsh/zshrc/tools/starship.zsh

--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -53,7 +53,7 @@ yay -S --needed --answerclean N --answerdiff N \
     syncthing \
     tmux \
     yarn \
-    z \
+    zoxide \
     zsh \
     zsh-antidote \
     zsh-completions
