--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -32,6 +32,7 @@ yay -S --needed --answerclean N --answerdiff N \
     aspell-ru \
     bat \
     bpytop \
+    dialog \
     duf \
     emacs-nativecomp \
     exa \
