--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -67,6 +67,7 @@ yay -S --needed --answerclean N --answerdiff N \
     alacritty \
     awesome-terminal-fonts \
     blueberry \
+    dex \
     i3-wm \
     i3blocks \
     i3status \
