--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -68,6 +68,7 @@ yay -S --needed --answerclean N --answerdiff N \
     awesome-terminal-fonts \
     blueberry \
     dex \
+    direnv \
     i3-wm \
     i3blocks \
     i3status \
@@ -97,6 +98,8 @@ yay -S --needed --answerclean N --answerdiff N \
     lxappearance-gtk3 \
     neovim-qt \
     rofi-emoji \
+    timew \
+    translate-shell \
     ttf-dejavu \
     ttf-iosevka \
     ttf-ms-fonts \
