--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -97,6 +97,7 @@ yay -S --needed --answerclean N --answerdiff N \
     lightdm-settings \
     lxappearance-gtk3 \
     neovim-qt \
+    noisetorch \
     rofi-emoji \
     timew \
     translate-shell \
