--- a/src/run_once_install-packages.sh.tmpl
+++ b/src/run_once_install-packages.sh.tmpl
@@ -121,7 +121,7 @@ header "Installing optional packages for battery powered devices"
 
 my:yay \
     light \
-    mate-power-manager \
+    gnome-power-manager \
     powertop \
     tlp \
     tlp-rdw
