--- a/src/run_once_install-packages.sh.tmpl
+++ b/src/run_once_install-packages.sh.tmpl
@@ -102,6 +102,7 @@ my:yay \
     lxappearance-gtk3 \
     neovim-qt \
     noisetorch \
+    python-dateutil \
     rofi-emoji \
     timew \
     translate-shell \
