--- a/src/run_once_install-packages.sh.tmpl
+++ b/src/run_once_install-packages.sh.tmpl
@@ -82,6 +82,7 @@ my:yay \
     noto-fonts \
     noto-fonts-emoji \
     pavucontrol \
+    polybar \
     pulseaudio \
     pulseaudio-alsa \
     rofi \
