--- a/src/run_once_install-packages.sh.tmpl
+++ b/src/run_once_install-packages.sh.tmpl
@@ -97,6 +97,7 @@ header "Installing optional desktop-lite packages"
 my:yay \
     feh \
     firefox \
+    git-delta \
     gnome-keyring \
     keepassxc \
     lightdm-settings \
