--- a/src/private_dot_config/i3/config.tmpl
+++ b/src/private_dot_config/i3/config.tmpl
@@ -365,23 +365,9 @@ mode $mode_gaps {
     bindsym Escape mode "default"
 }
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-#bar {
-#    colors {
-#        background #2f343f
-#        statusline #2f343f
-#        separator #4b5262
-#
-#        # colour of border, background, and text
-#        focused_workspace       #2f343f #bf616a #d8dee8
-#        active_workspace        #2f343f #2f343f #d8dee8
-#        inactive_workspace      #2f343f #2f343f #d8dee8
-#        urgent_workspace        #2f343f #ebcb8b #2f343f
-#    }
-#    status_command i3status
-#    position top
-#}
+bar {
+    status_command ~/.config/polybar/launch.sh
+}
 
 
 # colour of border, background, text, indicator, and child_border
