--- a/src/private_dot_config/i3/config.tmpl
+++ b/src/private_dot_config/i3/config.tmpl
@@ -382,6 +382,18 @@ smart_borders on
 hide_edge_borders both
 for_window [floating] move position center
 
+assign [class="firefox"] workspace $ws1
+assign [class="google-chrome"] workspace $ws1
+
+assign [class="TelegramDesktop"] workspace $ws3
+
+assign [class="Spotify"] workspace $ws4
+
+assign [class="NoiseTorch"] workspace $ws7
+assign [class="pavucontrol"] workspace $ws7
+
+assign [class="keepassxc"] workspace $ws10
+
 # Set Zoom notification window to floating with no focus
 for_window [title="^zoom\s?$"] floating enable
 no_focus [title="^zoom\s?$"]
