--- a/src/private_dot_config/i3/config.tmpl
+++ b/src/private_dot_config/i3/config.tmpl
@@ -389,6 +389,9 @@ assign [class="TelegramDesktop"] workspace $ws3
 
 assign [class="Spotify"] workspace $ws4
 
+assign [class="morgen"] workspace $ws5
+assign [class="mailspring"] workspace $ws5
+
 assign [class="NoiseTorch"] workspace $ws7
 assign [class="pavucontrol"] workspace $ws7
 
