--- a/src/run_once_install-packages.sh.tmpl
+++ b/src/run_once_install-packages.sh.tmpl
@@ -75,6 +75,7 @@ my:yay \
     direnv \
     i3-wm \
     i3blocks \
+    i3lock-color \
     i3status \
     lightdm \
     lightdm-slick-greeter \
