--- a/src/private_dot_config/i3/config.tmpl
+++ b/src/private_dot_config/i3/config.tmpl
@@ -386,11 +386,14 @@ assign [class="firefox"] workspace $ws1
 assign [class="google-chrome"] workspace $ws1
 
 assign [class="TelegramDesktop"] workspace $ws3
+assign [class="Slack"] workspace $ws3
 
 assign [class="Spotify"] workspace $ws4
 
 assign [class="morgen"] workspace $ws5
 assign [class="mailspring"] workspace $ws5
+
+assign [title="Google Meet"] workspace $ws6
 
 assign [class="NoiseTorch"] workspace $ws7
 assign [class="pavucontrol"] workspace $ws7
