Update src/.zsh/zshrc/tools/antidote.zsh Update src/install-packages.sh

--- a/src/run_once_install-packages.sh.tmpl
+++ b/src/run_once_install-packages.sh.tmpl
@@ -114,7 +114,9 @@ my:yay \
     ttf-ms-fonts \
     ttf-roboto-mono \
     variety \
+    wmctrl \
     xclip \
+    xdotool \
     xfce4-notifyd \
     xkb-switch-i3 \
     xsel
