--- a/src/run_once_install-packages.sh.tmpl
+++ b/src/run_once_install-packages.sh.tmpl
@@ -88,6 +88,7 @@ my:yay \
     pulseaudio-alsa \
     rofi \
     ttf-iosevka-nerd \
+    ttf-iosevkaterm-nerd \
     ttf-roboto \
     xorg
 {{ end -}}
@@ -132,4 +133,3 @@ my:yay \
     tlp \
     tlp-rdw
 {{ end -}}
-
