--- a/src/private_dot_config/i3/config.tmpl
+++ b/src/private_dot_config/i3/config.tmpl
@@ -120,6 +120,8 @@ bindsym XF86MonBrightnessDown exec light -U 5 # decrease screen brightness
 
 # Translate selected text (to English)
 bindsym $mod+Ctrl+t exec ~/bin/translate
+# Pronounce selected text (in German)
+bindsym $mod+Ctrl+a exec trans -speak -no-translate -s de
 
 # I2C brightness control
 # Requires:
