--- a/src/private_dot_config/i3/config.tmpl
+++ b/src/private_dot_config/i3/config.tmpl
@@ -121,7 +121,7 @@ bindsym XF86MonBrightnessDown exec light -U 5 # decrease screen brightness
 # Translate selected text (to English)
 bindsym $mod+Ctrl+t exec ~/bin/translate
 # Pronounce selected text (in German)
-bindsym $mod+Ctrl+a exec trans -speak -no-translate -s de
+bindsym $mod+Ctrl+a exec ~/bin/translate --speak
 
 # I2C brightness control
 # Requires:
