--- a/src/private_dot_config/i3/config.tmpl
+++ b/src/private_dot_config/i3/config.tmpl
@@ -12,7 +12,7 @@ set $right l
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango: Iosevka Nerd Font Mono, FontAwesome 11
+font pango: Iosevka NFM, FontAwesome 11
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -83,7 +83,7 @@ bindsym $mod+d exec \
     -show drun \
     -sidebar-mode \
     -columns 3 \
-    -font 'Iosevka Nerd Font Mono 12'
+    -font 'Iosevka NFM 12'
 # start emoji picker
 bindsym $mod+y exec rofi -show emoji -modi emoji
 
