add missing package polybar-scripts-git

--- a/src/run_once_install-packages.sh.tmpl
+++ b/src/run_once_install-packages.sh.tmpl
@@ -84,6 +84,7 @@ my:yay \
     noto-fonts-emoji \
     pavucontrol \
     polybar \
+    polybar-scripts-git \
     pulseaudio \
     pulseaudio-alsa \
     rofi \
