add missing packages arc-*-theme

--- a/src/run_once_install-packages.sh.tmpl
+++ b/src/run_once_install-packages.sh.tmpl
@@ -106,6 +106,8 @@ my:yay \
 header "Installing optional desktop-lite packages"
 
 my:yay \
+    arc-icon-theme \
+    arc-solid-gtk-theme \
     feh \
     firefox \
     git-delta \
