--- a/src/run_update-zsh-plugins.sh.tmpl
+++ b/src/run_update-zsh-plugins.sh.tmpl
@@ -1,6 +1,8 @@
 #!/bin/zsh
 # vim: set ft=zsh :
 
+UPDATE_FREQUENCY='7 days'
+
 set -euo pipefail
 
 antidote_source="/usr/share/zsh-antidote/antidote.zsh"
@@ -8,9 +10,16 @@ antidote_source="/usr/share/zsh-antidote/antidote.zsh"
 
 if command -v antidote &> /dev/null
 then
-    printf ' :Updating ZSH plugins: ' \
-        | xargs -d: -n1 printf '\033[1;30;42m %-77s \033[0m\n'
-    antidote update
+    state_file="{{.chezmoi.cacheDir}}/emacs-updated"
+    now_file="$(mktemp)"
+    touch -d "$UPDATE_FREQUENCY ago" "$now_file"
+
+    if [[ ! -f "${state_file}" || "${state_file}" -ot "${now_file}" ]]
+    then
+        printf ' :Updating ZSH plugins: ' \
+            | xargs -d: -n1 printf '\033[1;30;42m %-77s \033[0m\n'
+        antidote update
+    fi
 else
     printf ' : Antidote is not installed -> skipping update: ' \
         | xargs -d: -n1 printf '\033[1;30;43m %-77s \033[0m\n'
