--- a/src/private_dot_config/i3/config.tmpl
+++ b/src/private_dot_config/i3/config.tmpl
@@ -306,12 +306,14 @@ mode $mode_displays {
 }
 bindsym $mod+Shift+d mode $mode_displays
 
-set $mode_wallpaper "wallpaper: d[elete], n[ext], p[revious], f[avorite]"
+set $mode_wallpaper "wallpaper: d[elete], n[ext], p[revious], f[avorite], r[eset]"
 mode $mode_wallpaper {
     bindsym d exec variety --trash
     bindsym n exec variety --next
     bindsym p exec variety --previous
     bindsym f exec variety --favorite
+
+    bindsym r exec ~/.fehbg
 
     bindsym Return mode "default"
     bindsym Escape mode "default"
