--- a/src/run_once_install-packages.sh.tmpl
+++ b/src/run_once_install-packages.sh.tmpl
@@ -7,7 +7,7 @@ header(){
     printf " :%s: " "$1" | xargs -d: -n1 printf '\033[1;30;42m %-77s \033[0m\n'
 }
 
-{{ if .chezmoi.osRelease.id == "arch" -}}
+{{ if eq .chezmoi.osRelease.id "arch" -}}
 
 my:yay(){
     yay -S --needed --answerclean N --answerdiff N "$@"
@@ -152,7 +152,7 @@ my:yay \
 {{ end -}} # .chezmoi.osRelease.id == "arch"
 
 
-{{ if .chezmoi.osRelease.id == "ubuntu" -}}
+{{ if eq .chezmoi.osRelease.id "ubuntu" -}}
 # Ubuntu is in WIP state, install all packages for a laptop in one go
 
 # TODO:
